Problem areas now tied to care plans, modal overflow fix, fixes on care team page, other minor fixes and visual changes

--- a/Source/Web/src/app/components/patient-header/patient-header.component.scss
+++ b/Source/Web/src/app/components/patient-header/patient-header.component.scss
@@ -3,7 +3,7 @@
 }
 
 .smallLabel {
-  font-size: 11px;
+  font-size: 10px;
 }
 
 .checkinText {
@@ -16,4 +16,8 @@
   position: inherit;
   top: auto;
   left: auto;
+}
+
+.drop__input--select {
+  max-width: initial;
 }
